# GazePrediction-Pre-Study

./: .gitignore  README.md  pyproject.toml
Experiments/: README.md
analysis/: README.md  __init__.py  analyze_anchor_gap_position.py  analyze_paper_missing_results.py  analyze_prediction_results.py  prediction_plots.py  prediction_results.py
configs/: README.md  paths.example.env
docs/: adt_dataset_notes.md  adt_exploration_plan.md  adt_feature_and_visualization_commands.md  adt_feature_extraction_guide.md  gaze_event_analysis_notes.md  gaze_quality_report_notes.md  head_gaze_relationship_analysis.md  head_gaze_relationship_report.md  multiview_gaze_dashboard_design.md  scene_feature_extraction_plan.md  scene_head_gaze_relationship_report.md  sparsegaze_head_utility_analysis_plan.md  sparsegaze_head_utility_report.md  sparsegaze_modeling_notes.md  sparsegaze_paper_analysis_plan.md  sparsegaze_paper_experiment_report.md  tutorial_gaze_feature_extraction.md
manifests/: README.md
notebooks/: 02_gaze_head_scene_viewer.ipynb  04_gaze_head_scene_viewer_interactive.ipynb  05_scene_object_gaze_viewer.ipynb  06_scene_object_gaze_dynamic_viewer.ipynb  07_multiview_gaze_dashboard.ipynb  08_prediction_gaze_evaluation_viewer.ipynb  09_npz_gaze_visualization_viewer.ipynb  README.md
outputs/: README.md
scripts/: README.md  analyze_head_gaze_relationship.py  analyze_scene_head_gaze_relationship.py  analyze_sparsegaze_head_utility.py  batch_compute_gaze_object_hits.py  batch_extract_gaze_samples.py  batch_extract_head_proxy.py  batch_extract_scene_object_boxes.py  (+18 more)
(+72 files in other folders)
