[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adt-dataset-sandbox"
version = "0.1.0"
description = "Lightweight sandbox for exploring the Aria Digital Twin dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "imageio",
  "matplotlib",
  "numpy",
  "pandas",
  "projectaria-tools",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "pytest",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
